--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ main {
 }
 
 .hero-text-container {
-    width: 90%;
+    width: 80%;
     height: 500px;
     display: flex;
     flex-direction: column;
@@ -134,6 +134,33 @@ main {
     color: var(--text-color);
     text-transform: uppercase;
     cursor: pointer;
+}
+
+.presentacion-container {
+    background-color: var(--main-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+    gap: 30px;
+}
+
+.presentacion-image-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.presentacion-text {
+    width: 100%;
+}
+
+.presentacion-text p {
+    display: block;
+    color: var(--text-color);
+    text-align: center;
+    font-size: 24px;
 }
 
 /*MEDIUM DEVICES*/
