--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ main {
     border: none;
     font-size: 18px;
     font-weight: 300;
-    background-color: var(--main-color);
+    background-color: #861021;
     color: var(--text-color);
     text-transform: uppercase;
     cursor: pointer;
@@ -144,6 +144,8 @@ main {
     align-items: center;
     padding: 40px;
     gap: 30px;
+    background-color: #ce4257;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23fdfcdc' fill-opacity='0.12'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 .presentacion-image-container {
@@ -162,6 +164,147 @@ main {
     text-align: center;
     font-size: 24px;
 }
+
+/*PRODUCTOS*/
+
+.products-items-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: ;
+    gap: 10px: padding: 0 10px;
+}
+
+.product {
+    height: 250px;
+    width: 100%;
+    background-color: var(--text-color);
+}
+
+.products-dulces .product-image {
+    height: 70%;
+    width: 100%;
+    background-image: url("images/medialunas.jpg");
+    background-size: cover;
+}
+
+.products-salados .product-image {
+    height: 70%;
+    width: 100%;
+    background-image: url("images/cremona.jpg_395089405.png");
+    background-size: cover;
+}
+
+.products-pasteleria .product-image {
+    height: 70%;
+    width: 100%;
+    background-image: url("images/cake.jpg");
+    background-size: cover;
+}
+
+.products-cafeteria .product-image {
+    height: 70%;
+    width: 100%;
+    background-image: url("images/coffee.jpg");
+    background-size: cover;
+}
+
+.product-text {
+    width: 100%;
+    height: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--main-color);
+    font-size: 24px;
+    font-weight: 300;
+}
+
+/*COMO COMPRAR*/
+
+.how-to-buy-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 0;
+    background-color: #ce4257;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23fdfcdc' fill-opacity='0.12'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+
+.how-to-buy-container h3 {
+    font-size: 24px;
+    color: var(--text-color);
+    padding-bottom: 10px;
+}
+
+.how-to-buy-container p {
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--text-color);
+}
+
+
+
+.how-to-buy-steps {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 70%;
+    margin-top: 30px;
+}
+
+.steps {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 30%;
+    gap: 20px;
+}
+
+.steps-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    background-color: var(--text-color);
+    position: relative;
+    top: 0;
+    font-size: 24px;
+    color: var(--main-color);
+}
+
+.steps-text {
+    height: 150px;
+    text-align: center;
+    color: var(--text-color);
+    font-weight: 500;
+
+}
+
+.buttons-steps-account {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.buttons-steps-account button {
+    width: 150px;
+    height: 50px;
+    border-radius: 50px;
+    border: none;
+    background-color: #a0265d;
+    color: var(--text-color);
+    cursor: pointer;
+    font-weight: 500;
+}
+
+
+
+
 
 /*MEDIUM DEVICES*/
 
@@ -206,5 +349,14 @@ main {
     .hero-text-container h2 {
         text-align: center;
         font-size: 44px;
+    }
+
+    /*PRODUCTS MEDIUM*/
+
+    .products-items-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 250px 250px;
+        gap: 0;
     }
 }
